--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-<head>
-  <meta http-equiv="refresh" content="0; url='/'" />
-</head>
-<body>
-  <p>Redirigiendo... <a href="/">Haz clic aquí si no funciona</a></p>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='/'" />
+  </head>
+  <body>
+    <p>Redirigiendo... <a href="/">Haz clic aquí si no funciona</a></p>
+  </body>
 </html>
